# OpenGL

./: CMakeLists.txt  README.md  main.cpp
glad/include/glad/: glad.h
src/: CMakeLists.txt  glad.c
